--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ axum = { version = "0.7.5", features = ["ws", "http2"] }
 hyper = { version = "1.4.1", features = ["full"] }
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = { version = "1.0.127", features = ["raw_value"] }
+sqlx = { version = "0.8.1", features = ["runtime-tokio", "uuid"] }
 tokio = { version = "1.40.0", features = ["full"] }
 tower = "0.5.0"
 tower-http = "0.5.2"
