--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.5", features = ["ws", "http2"] }
+chrono = { version = "0.4.38", features = ["serde"] }
 hyper = { version = "1.4.1", features = ["full"] }
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = { version = "1.0.127", features = ["raw_value"] }
